@@ -1,4 +1,4 @@
-/* $Id: fetch-mbox.c,v 1.2 2007-08-03 08:15:59 nicm Exp $ */
+/* $Id: fetch-mbox.c,v 1.3 2007-08-03 11:06:02 nicm Exp $ */
 
 /*
  * Copyright (c) 2007 Nicholas Marriott <nicm@users.sourceforge.net>
@@ -19,6 +19,7 @@
 #include <sys/types.h>
 #include <sys/stat.h>
 #include <sys/mman.h>
+#include <sys/uio.h>
 
 #include <errno.h>
 #include <fcntl.h>
@@ -34,15 +35,13 @@
 int	fetch_mbox_connect(struct account *);
 int	fetch_mbox_completed(struct account *);
 int	fetch_mbox_fetch(struct account *, struct fetch_ctx *);
-int	fetch_mbox_poll(struct account *, u_int *);
 int	fetch_mbox_disconnect(struct account *, int);
 void	fetch_mbox_desc(struct account *, char *, size_t);
-/* XXX purge. disconnect/reconnect... */
 
 void	fetch_mbox_free(void *);
 
-int	fetch_mbox_makepaths(struct account *);
-void	fetch_mbox_freepaths(struct account *);
+int	fetch_mbox_make(struct account *);
+int	fetch_mbox_commit(struct account *, struct fetch_mbox_mbox *);
 
 int	fetch_mbox_next(struct account *, struct fetch_ctx *);
 int	fetch_mbox_open(struct account *, struct fetch_ctx *);
@@ -56,7 +55,7 @@ struct fetch fetch_mbox = {
 	fetch_mbox_completed,
 	NULL,
 	fetch_mbox_fetch,
-	fetch_mbox_poll,
+	NULL,
 	NULL,
 	NULL,
 	fetch_mbox_disconnect,
@@ -68,21 +67,24 @@ fetch_mbox_free(void *ptr)
 {
 	struct fetch_mbox_mail	*aux = ptr;
 
+	if (aux->fmbox->reference == 0)
+		fatalx("zero reference count");
+	aux->fmbox->reference--;
+
 	xfree(aux);
 }
 
-/* Make an array of all the paths to visit. */
+/* Make an array of all the mboxes to visit. */
 int
-fetch_mbox_makepaths(struct account *a)
+fetch_mbox_make(struct account *a)
 {
 	struct fetch_mbox_data	*data = a->data;
+	struct fetch_mbox_mbox	*fmbox;
 	char			*path;
 	u_int			 i, j;
 	glob_t			 g;
-	struct stat		 sb;
 
-	data->paths = xmalloc(sizeof *data->paths);
-	ARRAY_INIT(data->paths);
+	ARRAY_INIT(&data->fmboxes);
 
 	for (i = 0; i < ARRAY_LENGTH(data->mboxes); i++) {
 		path = ARRAY_ITEM(data->mboxes, i);
@@ -94,38 +96,24 @@ fetch_mbox_makepaths(struct account *a)
 		if (g.gl_pathc < 1)
 			fatalx("glob returned garbage");
 		for (j = 0; j < (u_int) g.gl_pathc; j++) {
-			path = xstrdup(g.gl_pathv[j]);
-			ARRAY_ADD(data->paths, path);
-			if (stat(path, &sb) != 0) {
-				log_warn("%s: %s", a->name, path);
-				goto error;
-			}
-			if (S_ISDIR(sb.st_mode)) {
-				errno = EISDIR;
-				log_warn("%s: %s", a->name, path);
-				goto error;
-			}
+			fmbox = xcalloc(1, sizeof *fmbox);
+			fmbox->path = xstrdup(g.gl_pathv[j]);
+			ARRAY_ADD(&data->fmboxes, fmbox);
 		}
 	}
 
 	return (0);
 
 error:
-	fetch_mbox_freepaths(a);
+	for (i = 0; i < ARRAY_LENGTH(&data->fmboxes); i++) {
+		fmbox = ARRAY_ITEM(&data->fmboxes, i);
+
+		xfree(fmbox->path);
+		xfree(fmbox);
+	}
+	ARRAY_FREE(&data->fmboxes);
+
 	return (-1);
-}
-
-/* Free the array. */
-void
-fetch_mbox_freepaths(struct account *a)
-{
-	struct fetch_mbox_data	*data = a->data;
-	u_int			 i;
-
-	for (i = 0; i < ARRAY_LENGTH(data->paths); i++)
-		xfree(ARRAY_ITEM(data->paths, i));
-
-	ARRAY_FREEALL(data->paths);
 }
 
 /* Set initial state. */
@@ -134,17 +122,16 @@ fetch_mbox_connect(struct account *a)
 {
 	struct fetch_mbox_data	*data = a->data;
 	
-	if (fetch_mbox_makepaths(a) != 0)
+	if (fetch_mbox_make(a) != 0)
 		return (-1);
 	data->index = 0;
 
-	if (ARRAY_EMPTY(data->paths)) {
+	if (ARRAY_EMPTY(&data->fmboxes)) {
 		log_warnx("%s: no mboxes found", a->name);
 		return (-1);
 	}
 
-	data->fd = -1;
-	data->base = NULL;
+	TAILQ_INIT(&data->kept);
 
 	data->state = fetch_mbox_open;
 	return (0);
@@ -156,23 +143,150 @@ fetch_mbox_completed(struct account *a)
 {
 	struct fetch_mbox_data	*data = a->data;
 
-	return (data->index >= ARRAY_LENGTH(data->paths));
+	return (data->index >= ARRAY_LENGTH(&data->fmboxes));
 }
 
 /* Clean up and free data. */
 int
-fetch_mbox_disconnect(struct account *a, unused int aborted)
+fetch_mbox_disconnect(struct account *a, int aborted)
 {
 	struct fetch_mbox_data	*data = a->data;
+	struct fetch_mbox_mbox	*fmbox;
+	u_int			 i;
 
-	if (data->base != NULL)
-		munmap(data->base, data->size);
-	if (data->fd != -1)
-		closelock(data->fd, data->path, conf.lock_types);
+	for (i = 0; i < ARRAY_LENGTH(&data->fmboxes); i++) {
+		fmbox = ARRAY_ITEM(&data->fmboxes, i);
 
-	fetch_mbox_freepaths(a);
+		/* Commit changes if not aborted. */
+		if (!aborted && fetch_mbox_commit(a, fmbox) != 0)
+			aborted = 1;
+
+		if (fmbox->base != NULL)
+			munmap(fmbox->base, fmbox->size);
+		if (fmbox->fd != -1)
+			closelock(fmbox->fd, fmbox->path, conf.lock_types);
+
+		xfree(fmbox->path);
+		xfree(fmbox);
+	}
+	ARRAY_FREE(&data->fmboxes);
 
 	return (0);
+}
+
+/* Commit mbox changes. */
+int
+fetch_mbox_commit(struct account *a, struct fetch_mbox_mbox *fmbox)
+{
+	struct fetch_mbox_data	*data = a->data;
+	struct fetch_mbox_mail	*aux, *this;
+	char			 path[MAXPATHLEN], saved[MAXPATHLEN], c;
+	int			 fd;
+	ssize_t			 n;
+	struct iovec		 iov[2];
+
+	log_debug2("%s: %s: committing mbox: %u kept, %u total",
+	    a->name, fmbox->path, fmbox->reference, fmbox->total);
+	fd = -1;
+
+	/*
+	 * If the reference count is 0, no mails were kept, so the mbox can
+	 * just be truncated.
+	 */
+	if (fmbox->reference == 0) {
+		if (fmbox->total != 0 && ftruncate(fmbox->fd, 0) != 0)
+			goto error;
+		goto free_all;
+	}
+
+	/* If all the mails were kept, do nothing. */
+	if (fmbox->reference == fmbox->total)
+		goto free_all;
+
+	/*
+	 * Otherwise, things get complicated. data->kept is a list of all the
+	 * mails (struct fetch_mbox_mail) which were kept for ALL mailboxes.
+	 * There is no guarantee it is ordered by offset. Rather than try to be
+	 * clever and save disk space, just create a new mbox and copy all the
+	 * kept mails into it.
+	 */
+	if (mkpath(path, sizeof path, "%s.XXXXXXXXXX", fmbox->path) != 0)
+		goto error;
+	if (mkpath(saved, sizeof saved, "%s.XXXXXXXXXX", fmbox->path) != 0)
+		goto error;
+	if ((fd = mkstemp(path)) == -1)
+		goto error;
+
+	aux = TAILQ_FIRST(&data->kept);
+	while (aux != NULL) {
+		this = aux;
+		aux = TAILQ_NEXT(aux, entry);
+
+		if (this->fmbox != fmbox)
+			continue;
+
+		log_debug2("%s: writing message from %zu, size %zu",
+		    a->name, this->off, this->size);
+		c = '\n';
+		iov[0].iov_base = fmbox->base + this->off;
+		iov[0].iov_len = this->size;
+		iov[1].iov_base = &c;
+		iov[1].iov_len = 1;
+		if ((n = writev(fd, iov, 2)) < 0)
+			goto error;
+		if ((size_t) n != this->size + 1) {
+			errno = EIO;
+			goto error;
+		}
+
+		fetch_mbox_free(this);
+		TAILQ_REMOVE(&data->kept, this, entry);
+	}
+
+	if (fsync(fd) != 0)
+		goto error;
+	close(fd);
+
+	/*
+	 * Do the replacement dance: create a backup copy of the mbox, remove
+	 * the mbox, link in the temporary file, unlink the temporary file,
+	 * then unlink the backup mbox. We don't try to recover if anything
+	 * fails on the grounds that it could just make things worse, just
+	 * die and let the user sort it out.
+	 */
+	if (link(fmbox->path, saved) != 0)
+		goto error;
+	if (unlink(fmbox->path) != 0)
+		goto error;
+	if (link(path, fmbox->path) != 0)
+		goto error;
+	if (unlink(path) != 0)
+		goto error;
+	if (unlink(saved) != 0)
+		goto error;
+
+free_all:
+	aux = TAILQ_FIRST(&data->kept);
+	while (aux != NULL) {
+		this = aux;
+		aux = TAILQ_NEXT(aux, entry);
+
+		if (this->fmbox == fmbox)
+			fetch_mbox_free(this);
+	}
+
+	if (fmbox->reference != 0)
+		fatalx("dangling reference");
+
+	return (0);
+
+error:
+	if (fd != -1) {
+		close(fd);
+		unlink(path);
+	}
+	log_warn("%s: %s", a->name, fmbox->path);
+	return (-1);
 }
 
 /* Fetch mail. */
@@ -184,30 +298,26 @@ fetch_mbox_fetch(struct account *a, struct fetch_ctx *fctx)
 	return (data->state(a, fctx));
 }
 
-/* Poll for mbox total. */
-int
-fetch_mbox_poll(struct account *a, u_int *n)
-{
-	struct fetch_mbox_data	*data = a->data;
-
-	/* XXX */
-
-	return (0);
-}
-
 /* Next state. Move to next mbox. */
 int
 fetch_mbox_next(struct account *a, struct fetch_ctx *fctx)
 {
 	struct fetch_mbox_data	*data = a->data;
 	struct fetch_mbox_mail	*aux;
-	struct mail			*m;
+	struct mail	       	*m;
 
 	/* Delete mail if any. */
 	while ((m = done_mail(a, fctx)) != NULL) {
-		aux = m->auxdata;
 		if (m->decision != DECISION_DROP) {
-			/* copy to kept list and clear ->aux to prevent free */
+			aux = m->auxdata;
+
+			/*
+			 * Add to kept list and reset callback to prevent free.
+			 * Kept entries are used when committing changes to
+			 * mboxes.
+			 */
+			TAILQ_INSERT_TAIL(&data->kept, aux, entry);
+			m->auxfree = NULL;
 		}
 		dequeue_mail(a, fctx);
 	}
@@ -226,56 +336,62 @@ int
 fetch_mbox_open(struct account *a, unused struct fetch_ctx *fctx)
 {
 	struct fetch_mbox_data	*data = a->data;
-	char			*path;
+	struct fetch_mbox_mbox	*fmbox;
+	char			*ptr;
 	struct stat	         sb;
 	uintmax_t		 size;
 	long long		 used;
 
-	data->path = ARRAY_ITEM(data->paths, data->index);
+	fmbox = ARRAY_ITEM(&data->fmboxes, data->index);
+	fmbox->fd = -1;
+	fmbox->base = NULL;
 
-	log_debug2("%s: trying path: %s", a->name, data->path);
-	if (stat(data->path, &sb) != 0)
+	log_debug2("%s: trying path: %s", a->name, fmbox->path);
+	if (stat(fmbox->path, &sb) != 0)
 		goto error;
 	if (S_ISDIR(sb.st_mode)) {
 		errno = EISDIR;
 		goto error;
 	}
+	if (sb.st_size == 0) {
+		data->state = fetch_mbox_next;
+		return (FETCH_AGAIN);
+	}
 	if (sb.st_size < 5) {
-		log_warnx("%s: %s: mbox too small", a->name, data->path);
+		log_warnx("%s: %s: mbox too small", a->name, fmbox->path);
 		return (FETCH_ERROR);
 	}
 	size = sb.st_size;
 	if (size > SIZE_MAX) {
-		log_warnx("%s: %s: mbox too big", a->name, data->path);
+		log_warnx("%s: %s: mbox too big", a->name, fmbox->path);
 		return (FETCH_ERROR);
 	}
-	data->size = size;
+	fmbox->size = size;
 	
 	log_debug3("%s: opening mbox, size %ju", a->name, size);
 	used = 0;
 	do {
-		data->fd = openlock(data->path, O_RDWR, conf.lock_types);
-		if (data->fd == -1) {
+		fmbox->fd = openlock(fmbox->path, O_RDWR, conf.lock_types);
+		if (fmbox->fd == -1) {
 			if (errno == EAGAIN) {
-				if (locksleep(a->name, data->path, &used) != 0)
+				if (locksleep(a->name, fmbox->path, &used) != 0)
 					return (FETCH_ERROR);
 				continue;
 			}
 			goto error;
 		}
-	} while (data->fd < 0);
+	} while (fmbox->fd < 0);
 		
 	/* mmap the file. */
-	data->base = mmap(
-	    NULL, data->size, PROT_READ|PROT_WRITE, MAP_SHARED, data->fd, 0);
-	if (data->base == MAP_FAILED) {
-		close(data->fd);
+	fmbox->base = mmap(
+	    NULL, fmbox->size, PROT_READ|PROT_WRITE, MAP_SHARED, fmbox->fd, 0);
+	if (fmbox->base == MAP_FAILED)
 		goto error;
-	}
+	data->off = 0;
 
-	if (strncmp(data->base, "From ", 5) != 0) {
-		close(data->fd);
-		log_warnx("%s: %s: not an mbox", a->name, data->path);
+	ptr = memchr(fmbox->base, '\n', fmbox->size);
+	if (strncmp(fmbox->base, "From ", 5) != 0) {
+		log_warnx("%s: %s: not an mbox", a->name, fmbox->path);
 		return (FETCH_ERROR);
 	}
 
@@ -283,7 +399,11 @@ fetch_mbox_open(struct account *a, unused struct fetch_ctx *fctx)
 	return (FETCH_AGAIN);
 
 error:
-	log_warn("%s: %s", a->name, data->path);
+	if (fmbox->base != NULL)
+		munmap(fmbox->base, fmbox->size);
+	if (fmbox->fd != -1)
+		closelock(fmbox->fd, fmbox->path, conf.lock_types);
+	log_warn("%s: %s", a->name, fmbox->path);
 	return (FETCH_ERROR);
 }
 
@@ -292,16 +412,91 @@ int
 fetch_mbox_mail(struct account *a, struct fetch_ctx *fctx)
 {
 	struct fetch_mbox_data		*data = a->data;
+	struct fetch_mbox_mbox		*fmbox;
 	struct fetch_mbox_mail		*aux;
 	struct mail			*m;
-	
-	/* XXX */
-	munmap(data->base, data->size);
-	data->base = NULL;
-	closelock(data->fd, data->path, conf.lock_types);
-	data->fd = -1;
+	char				*line, *ptr;
+	int				 flushing;
 
-	data->state = fetch_mbox_next;
+	/* Find current mbox and check for EOF. */
+	fmbox = ARRAY_ITEM(&data->fmboxes, data->index);
+	if (data->off == fmbox->size) {
+		data->state = fetch_mbox_next;
+		return (FETCH_AGAIN);
+	}
+
+	/* Create a new mail. */
+	m = xcalloc(1, sizeof *m);
+	m->shm.fd = -1;
+
+	/* Open the mail. */
+	if (mail_open(m, fmbox->size) != 0) {
+		log_warn("%s: failed to create mail", a->name);
+		mail_destroy(m);
+		return (FETCH_ERROR);
+	}
+
+	/* Create aux data. */
+	aux = xmalloc(sizeof *aux);
+	aux->off = data->off;
+	aux->size = 0;
+	aux->fmbox = fmbox;
+	if (++fmbox->reference == 0)
+		fatalx("reference count overflow");
+	m->auxdata = aux;
+	m->auxfree = fetch_mbox_free;
+
+	/*
+	 * We start at a "From " line and include it in the mail (it can be
+	 * trimmed later with minimal penalty).
+	 */
+	flushing = 0;
+	for (;;) {
+		/* Check for EOF. */
+		if (data->off == fmbox->size) {
+			aux->size = data->off - aux->off;
+			break;
+		}
+
+		/* Locate the EOL. */
+		line = fmbox->base + data->off;
+		ptr = memchr(line, '\n', fmbox->size - data->off);
+		if (ptr == NULL) {
+			ptr = fmbox->base + fmbox->size;
+			data->off = fmbox->size;
+		} else
+			data->off += ptr - line + 1;
+		
+		if (*line == '\n') {
+			/* Empty line. Check if the next is "From ". */
+			if (fmbox->size - data->off >= 5 &&
+			    strncmp(line + 1, "From ", 5) == 0) {
+				/* End of mail. */
+				aux->size = data->off - aux->off - 1;
+				break;
+			}
+		}
+
+		/* XXX Trim >s from From */
+
+		if (flushing)
+			continue;
+		if (append_line(m, line, ptr - line) != 0) {
+			log_warn("%s: failed to resize mail", a->name);
+			mail_destroy(m);
+			return (FETCH_ERROR);
+		}
+		if (m->size > conf.max_size)
+			flushing = 1;
+	}
+	fmbox->total++;
+	
+	/* Tag mail. */
+	default_tags(&m->tags, NULL);
+
+	if (enqueue_mail(a, fctx, m) != 0)
+		return (FETCH_ERROR);
+
 	return (FETCH_AGAIN);
 }
 
